--- a/assets/bubblepopper/style.css
+++ b/assets/bubblepopper/style.css
@@ -16,3 +16,45 @@ body {
   border: 4px solid black;
   background: linear-gradient(to bottom, lightblue, darkblue, black);
 }
+
+/* media queries  */
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+
+  body {
+    padding: 0;
+  }
+
+  #menu-bars {
+    display: initial;
+  }
+
+  header {
+    left: -120%;
+  }
+
+  header.active {
+    left: 0%;
+  }
+
+  .cursor-1,
+  .cursor-2 {
+    display: none;
+  }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  .experience .box-container .box {
+    padding-right: 0;
+  }
+}
