--- a/css/nativegallary.css
+++ b/css/nativegallary.css
@@ -14,11 +14,11 @@ ul {
   right: 0;
   margin: auto;
   list-style: none;
-  width: 955px;
+  width: 1055px;
   height: 800px;
-  border-radius: 3px;
+  border-radius: 30px;
   overflow: hidden;
-  box-shadow: 2px 2px 10px 2px;
+  /* box-shadow: 2px 2px 10px 2px; */
 }
 
 li {
@@ -30,18 +30,20 @@ li {
   -webkit-transition: all 0.7s;
   -moz-transition: all 0.7s;
   transition: all 0.7s;
-  box-shadow: -8px 0 10px 2px;
+  box-shadow: -1px 0 10px 2px;
+  border-radius: 30px;
 }
 
 ul li:first-child {
   border: none;
+  border-radius: 30px;
 }
 
 span {
   display: block;
   position: absolute;
   bottom: 0;
-  width: 50%;
+  width: 100%;
   color: white;
   white-space: nowrap;
   padding: 20px;
@@ -83,12 +85,13 @@ span {
 img {
   width: 500px;
   height: 800px;
+  border-radius: 30px;
 }
 
 ul:hover li {
-  width: 50px;
+  width: 40px;
 }
 
 ul li:hover {
-  width: 750px;
+  width: 500px;
 }
